<resources>
    <string name="app_name">Attic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wecomeMsg">Welcome to Attic!</string>
    <string name="introduction">Attic is a modern furnishing mobile application powered by machine learning and augmented reality.</string>
    <string name="homeCategoryHeading">Choose by Category</string>
    <string name="beds">Beds</string>
    <string name="sofas">Sofas</string>
    <string name="office">Office</string>
    <string name="decor_items">Decor Items</string>
    <string name="tables">Tables</string>
    <string name="chairs">Chairs</string>
    <string name="homeStart">GET STARTED</string>
    <string name="logoName">ATTIC</string>
    <string name="view_ar_products">View AR Products</string>
    <string name="view_captured_image">View Captured Image</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="office_furniture">Office Furniture</string>
    <string name="close">X</string>
    <string name="preview_for_funiture_item">preview for funiture item</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="material">Material:</string>
    <string name="color">Color:</string>
    <string name="price">Price:</string>
    <string name="view">View</string>
    <string name="livingroom">Livingroom</string>
    <string name="diningroom">Diningroom</string>
    <string name="bedroom">Bedroom</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="chair">Chair</string>
    <string name="table">Table</string>
    <string name="sofa">Sofa</string>
    <string name="bed">Bed</string>
    <string name="dresser">Dresser</string>
    <string name="dressers">Dressers</string>
    <string name="view_products">View Products</string>
    <string name="exit">Exit</string>
    <string name="thumbnail">thumbnail</string>
    <string name="welcome_to_attic">Welcome to Attic!</string>
    <string name="attic_is_a_modern_furnishing_mobile_application_powered_by_machine_learning_and_augmented_reality">Attic is a modern furnishing mobile application powered by machine learning and augmented reality.</string>
    <string name="choose_by_category">Choose by Category</string>
    <string name="get_started">GET STARTED</string>
    <string name="logo">logo</string>
    <string name="captured_image">Captured Image</string>
    <string name="recommended_colours">Recommended Colours</string>
    <string name="icon">icon</string>
    <string name="decor">Decor</string>
    <string name="viewRecommenedColor">view recommended colors</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="about">About</string>
    <string name="terms">Terms</string>
</resources>
