<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFB300"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_main5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="30dip"
        android:text="@string/logoName"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:paddingStart="30dip"
        android:paddingTop="15dip"
        android:paddingEnd="30dip"
        android:paddingBottom="15dip"
        android:text="@string/what_are_you_looking_for"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dip"
            android:layout_marginEnd="30dip"
            android:elevation="1dip"
            android:orientation="vertical">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/category_btn"
                android:contentDescription="@string/chair"
                android:drawableStart="@drawable/chair"
                android:fontFamily="@font/poppins_light"
                android:icon="@drawable/chair"
                android:onClick="loadProducts"
                android:paddingStart="30dip"
                android:paddingTop="20dip"
                android:paddingEnd="30dip"
                android:paddingBottom="20dip"
                android:text="@string/chairs"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#6E4D00" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/category_btn"
                android:contentDescription="@string/table"
                android:drawableStart="@drawable/cabinet"
                android:fontFamily="@font/poppins_light"
                android:icon="@drawable/chair"
                android:onClick="loadProducts"
                android:paddingStart="30dip"
                android:paddingTop="20dip"
                android:paddingEnd="30dip"
                android:paddingBottom="20dip"
                android:text="@string/tables"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#6E4D00" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/category_btn"
                android:contentDescription="@string/decor"
                android:drawableStart="@drawable/furniture"
                android:fontFamily="@font/poppins_light"
                android:icon="@drawable/chair"
                android:onClick="loadProducts"
                android:paddingStart="30dip"
                android:paddingTop="20dip"
                android:paddingEnd="30dip"
                android:paddingBottom="20dip"
                android:text="@string/decor_items"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#6E4D00" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/category_btn"
                android:contentDescription="@string/dresser"
                android:drawableStart="@drawable/office_chair"
                android:fontFamily="@font/poppins_light"
                android:icon="@drawable/chair"
                android:onClick="loadProducts"
                android:paddingStart="30dip"
                android:paddingTop="20dip"
                android:paddingEnd="30dip"
                android:paddingBottom="20dip"
                android:text="@string/dressers"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#6E4D00" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/category_btn"
                android:contentDescription="@string/sofa"
                android:drawableStart="@drawable/sofa"
                android:fontFamily="@font/poppins_light"
                android:icon="@drawable/chair"
                android:onClick="loadProducts"
                android:paddingStart="30dip"
                android:paddingTop="20dip"
                android:paddingEnd="30dip"
                android:paddingBottom="20dip"
                android:text="@string/sofas"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#6E4D00" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/category_btn"
                android:contentDescription="@string/bed"
                android:drawableStart="@drawable/beds"
                android:fontFamily="@font/poppins_light"
                android:icon="@drawable/chair"
                android:onClick="loadProducts"
                android:paddingStart="30dip"
                android:paddingTop="20dip"
                android:paddingEnd="30dip"
                android:paddingBottom="20dip"
                android:text="@string/beds"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#6E4D00" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>