<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_bg"
            android:orientation="vertical"
            android:padding="20dip">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:layout_marginTop="60dip"
                android:text="@string/welcome_to_attic"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="219dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:layout_marginTop="20dip"
                android:text="@string/attic_is_a_modern_furnishing_mobile_application_powered_by_machine_learning_and_augmented_reality" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:layout_marginTop="210dip"
                android:text="@string/choose_by_category"
                android:textSize="18sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/category_btn"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView16"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:contentDescription="@string/thumbnail"
                            app:srcCompat="@drawable/beds"
                            tools:src="@drawable/beds" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/livingroom"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/category_btn"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView15"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:contentDescription="@string/thumbnail"
                            app:srcCompat="@drawable/sofa" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/diningroom"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/category_btn"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView14"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:contentDescription="@string/thumbnail"
                            app:srcCompat="@drawable/office_chair" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/bedroom"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/category_btn"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:contentDescription="@string/thumbnail"
                            app:srcCompat="@drawable/furniture" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/coming_soon"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/category_btn"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:contentDescription="@string/thumbnail"
                            app:srcCompat="@drawable/cabinet" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/coming_soon"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/category_btn"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:contentDescription="@string/thumbnail"
                            app:srcCompat="@drawable/chair" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/coming_soon"
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/get_started"
                android:fontFamily="@font/poppins_light"
                android:onClick="loadCategory"
                android:text="@string/get_started"
                android:textColor="#936700"
                android:textSize="18sp" />

            <!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
        </LinearLayout>
    </ScrollView>

</FrameLayout>